fixed overflow issue

--- a/components/MarkDown/markdown.module.scss
+++ b/components/MarkDown/markdown.module.scss
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100%;
     justify-content: center;
+    overflow: hidden;
 }
 
 .markdown {
@@ -16,6 +17,7 @@
     border-right: 1px solid #e4e4e4;
     font-family: var(--mono);
     background-color: white;
+    overflow-y: scroll;
 
     & textarea {
         width: 100%;
@@ -71,7 +73,7 @@
     line-height: 24px;
     font-family: var(--slab);
     color: $light-text-primary;
-    overflow-y: auto;
+    overflow-y: scroll;
 
     & h1 {
         font-style: normal;
