--- a/components/SideBar/sidebar.module.scss
+++ b/components/SideBar/sidebar.module.scss
@@ -1,4 +1,6 @@
+@use '../../styles/breakpoints' as *;
 @import '../../styles/vars';
+
 
 .container {
     display: flex;
@@ -10,6 +12,20 @@
     background-color: $bg-sidebar;
     transition: all ease 0.5sec;
     padding: 24px;
+}
+
+.logo {
+display: none;
+margin-bottom: 27px;
+
+    @include breakpoint(mobile) {
+        display: inline;
+    }
+
+    @include breakpoint(tablet) {
+        display: inline;
+    }
+
 }
 
 .myDocuments {
