--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -5,12 +5,12 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .appContainer {
     display: flex;
     flex-direction: column;
-    transition: all ease 0.3sec;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
 }
